5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2502.log
== TEST (2019-05-15 07:49:56) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = squart(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = squart(12) * (aux * 1 / c * 3**y )
NameError: name 'squart' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:50:25) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = squart12 * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = squart12 * (aux * 1 / c * 3**y )
NameError: name 'squart12' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:54:09) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:54:19) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- EXECUTION TIME:
0.199073
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
9740.55887011
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
571334.15993289
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-505.06601549
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:54:27) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:54:35) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- EXECUTION TIME:
0.141837
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
9740.55887011
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
571334.15993289
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
-505.06601549
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:54:46) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = -1
	else:
		aux = 1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:55:04) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:55:12) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- EXECUTION TIME:
0.11442
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
9740.55887011
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
571334.15993289
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
505.06601549
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:55:19) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:55:27) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:56:50) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * aux*( 1 / c * 3**y )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:58:33) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) 
	z = (aux * 1 / c * 3**y )
	msg = x * z
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(msg, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:58:38) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) 
	z = (aux * 1 / c * 3**y )
	msg = x * z
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(msg, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:00:11) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**i )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:00:15) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * (aux * 1 / c * 3**i )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
9740.55887011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:00:32) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * (aux * 1 / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:00:36) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * (aux * 1 / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:00:48) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * (aux * 1 / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:01:08) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * ((aux * 1) / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:01:40) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1
y = 0

while(i < n):
	x = sqrt(12) * ((aux * 1) / (c * 3**y) )
	i = i + 1
	y = y + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:03:01) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * aux *(1 / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:03:04) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * aux *(1 / (c * 3**i) )
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:04:47) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt(12) * aux *(1 / (c * (3**i) ))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1
print(round(x, 8))
-- OUTPUT:
2.79e-06
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:05:25) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = sqrt12 * aux *(1 / (c * (3**i) ))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(x, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x = sqrt12 * aux *(1 / (c * (3**i) ))
NameError: name 'sqrt12' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:26:26) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = x + (sqrt(12) * aux *(1 / (c * (3**i) )))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(x, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:27:06) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = x + (sqrt(12) * (aux * (1 / (c * (3**i) ))))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(x, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:27:14) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = x + (sqrt(12) * (aux * (1 / (c * (3**i) ))))
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(x, 8))
-- EXECUTION TIME:
0.131346
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:29:12) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = x + (aux * (1 / (c * (3**i) )))
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(x, 8))
-- OUTPUT:
1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:29:30) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
aux = 1
c = 1


while(i < n):
	x = x + (aux * (1 / (c * (3**i) )))
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	if(aux == 1):
		aux = 1
	else:
		aux = -1

print(round(num, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:33:05) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0

c = 1


while(i < n):
	x = x + (-1)**(c + 1) * 1 / (c * (3**i) )
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:33:09) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0

c = 1


while(i < n):
	x = x + (-1)**(c + 1) * 1 / (c * (3**i) )
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:33:47) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
z = 0
c = 1


while(i < n):
	x = x + (-1)**(c + 1) * 1 / (c * (3**z) )
	num = sqrt(12) * x 
	i = i + 1
	z = z + 1
	c = c + 2
	
print(round(num, 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:42:55) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = x + (-1)**(i) / (c * (3**i) 
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- ERROR:
File "XXXX", line 11
    num = sqrt(12) * x 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:43:27) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = sqrt(12) * x + (-1)**(i) / (c * (3**i) 
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- ERROR:
File "XXXX", line 11
    num = sqrt(12) * x 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:44:59) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = x + (-1)**(i) / (c * (3**i) 
	num = (sqrt(12) * x)
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- ERROR:
File "XXXX", line 11
    num = (sqrt(12) * x)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:45:11) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = x + (-1)**(i) / (c * (3**i) 
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- ERROR:
File "XXXX", line 11
    num = sqrt(12) * x 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 08:45:22) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = x + (-1)**(i) / (c * (3**i) )
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 08:45:34) 
-- CODE:
from math import*
n = int(input("Insira um numero: "))

x = 0
i = 0
c = 1


while(i < n):
	x = x + (-1)**(i) / (c * (3**i) )
	num = sqrt(12) * x 
	i = i + 1
	c = c + 2
	
print(round(num, 8))
-- EXECUTION TIME:
0.140176
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
